<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiniTweeter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="friends">My followers</string>
    <string name="online">Connected</string>
    <string name="offline">Disconnected</string>
    <string name="login">Connexion</string>
    <string name="handle">Login</string>
    <string name="password">Password</string>
    <string name="required">Required</string>
    <string name="login_success">Welcome !</string>
    <string name="login_error">Connexion error</string>
    <string name="message">Message</string>
    <string name="post_success">Your message has been send.</string>
    <string name="post_error">An error occured.</string>
    <string name="logout">Disconnect</string>
    <string name="logout_confirm">Are you sure you want to unlog?</string>
    <string name="action_followings">Followings</string>
    <string name="action_followers">Followers</string>
    <string name="action_login">Connect</string>
    <string name="profile">My profile</string>
    <string name="follow">Follow</string>
    <string name="unfollow">unfollow</string>
    <string name="error">An error occured !</string>
    <string name="follow_success">Followed successfully !</string>
    <string name="unfollow_success">Unfollowed successfully !</string>
    <string name="action_home">Home</string>
</resources>
